force-app/main/default/objects/CM_Elo_Receipt__c/CM_Elo_Receipt__c.object-meta.xml
<CustomObject>
    <label>CM Elo Receipt</label>
    <nameField>
        <displayFormat>ELO-{000000}</displayFormat>
        <label>CM Elo Receipt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CM Elo Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>