force-app/main/default/objects/CM_Elo_Receipt__c/fields/CM_ELO_Change__c.field-meta.xml
<CustomField>
    <fullName>CM_ELO_Change__c</fullName>
    <label>CM ELO Change</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>