force-app/main/default/objects/CM_Elo_Receipt__c/fields/CM_Player__c.field-meta.xml
<CustomField>
    <fullName>CM_Player__c</fullName>
    <label>CM Player</label>
    <referenceTo>CM_Players__c</referenceTo>
    <relationshipLabel>CM Elo Receipts</relationshipLabel>
    <relationshipName>CM_Elo_Receipts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>