force-app/main/default/objects/CM_Elo_Receipt__c/fields/CM_Tag_Challenge__c.field-meta.xml
<CustomField>
    <fullName>CM_Tag_Challenge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CM Tag Challenge</label>
    <referenceTo>CM_Tag_Challenge__c</referenceTo>
    <relationshipLabel>CM Elo Receipts</relationshipLabel>
    <relationshipName>CM_Elo_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>