force-app/main/default/objects/CM_Elo_Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CM_ELO_Change__c</columns>
    <columns>CM_Player__c</columns>
    <columns>CM_Tag_Challenge__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>